# todo-rust

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
src/: controllers.rs  main.rs
src/controllers/: activities.rs  todos.rs
src/schema/: activities.sql  todos.sql
