[package]
name = "todo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "mysql", "chrono" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.15", features = ["derive"] }
log = "0.4.0"
env_logger = { version = "0.10.0" }
